--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 server.port=8081
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring
+spring.datasource.url=jdbc:postgresql://localhost:5432/yourDB
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=youPassword
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
